--- a/big_data_analytics.ipynb
+++ b/big_data_analytics.ipynb
@@ -2,11 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
+   "outputs": [],
+   "source": [
+    "# importando bibliotecas\n",
+    "import time\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import matplotlib.ticker as ticker\n",
+    "\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.types import StructType, StructField, StringType, DoubleType, IntegerType, DateType\n",
+    "from pyspark.sql.functions import col, sum, countDistinct, count, regexp_replace, split, month, year, size, element_at, struct, trim, avg, expr, lit\n",
+    "from pyspark.sql import functions as F\n",
+    "from pyspark.sql.window import Window"
+   ],
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
+   "id": "93f09866d2aa681d"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# Create SparkSession\n",
+    "spark = (SparkSession.builder\n",
+    "         .appName(\"AmazonElectronics\")\n",
+    "         .getOrCreate())"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9c467bc275e2ace8"
+  },
+  {
+   "cell_type": "code",
    "outputs": [],
    "source": [
     "StructField(\"timestamp\", DateType(), True),\n",
@@ -24,7 +55,7 @@
     "StructField(\"title\", StringType(), True),\n",
     "StructField(\"url\", StringType(), True),\n",
     "StructField(\"video_count\", IntegerType(), True),\n",
-    "StructField(\"category_tree\", StringType(), True),\n",
+    "StructField(\"categories\", StringType(), True),\n",
     "StructField(\"item_weight\", StringType(), True),\n",
     "StructField(\"rating\", DoubleType(), True),\n",
     "StructField(\"top_review\", StringType(), True),\n",
@@ -43,7 +74,12 @@
     "StructField(\"plus_content\", StringType(), True),\n",
     "StructField(\"upc\", StringType(), True),\n",
     "StructField(\"video\", StringType(), True),"
-   ]
+   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "id": "initial_id",
+   "execution_count": 0
   }
  ],
  "metadata": {
